# orbit

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  justfile
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  release.yml  test.yml  website.yml
apps/desktop/: README.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  terminal.rs
apps/desktop/ui/: .eslintrc.cjs  README.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/ui/scripts/: gen-icons.mjs
apps/desktop/ui/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/desktop/ui/src/components/: AiChatPanel.tsx  AppShell.tsx  CodeEditor.tsx  CommandPalette.tsx  ExplorerPanel.tsx  LanguageChip.tsx  OrbitGlyph.tsx  ProblemsPanel.tsx  ProjectCard.tsx  QuickActions.tsx  SearchPanel.tsx  Sidebar.tsx  SourceControlPanel.tsx  Splash.tsx  StatusBar.tsx  TerminalPane.tsx  TestingPanel.tsx  TitleBar.tsx  Toaster.tsx  UpdateBanner.tsx  UpdateCheck.tsx
apps/desktop/ui/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  progress.tsx  scroll-area.tsx  separator.tsx  tabs.tsx  tooltip.tsx
apps/desktop/ui/src/lib/: editorLang.ts  format.test.ts  format.ts  ipc.test.ts  ipc.ts  tabs.test.ts  tabs.ts  types.ts  updater.ts
apps/desktop/ui/src/store/: ai.test.ts  ai.ts  app.test.ts  app.ts  editor.test.ts  editor.ts  settings.test.ts  settings.ts  workspace.test.ts  workspace.ts
apps/desktop/ui/src/test/: setup.ts
apps/desktop/ui/src/views/: Analytics.tsx  ApiExplorer.tsx  Dashboard.tsx  Database.tsx  Docker.tsx  Ecosystem.tsx  Plugins.tsx  ProjectView.tsx  Settings.tsx
apps/website/: .gitignore  README.md  next.config.mjs  package.json  tailwind.config.ts
apps/website/app/: globals.css  layout.tsx  page.tsx
apps/website/app/docs/: layout.tsx  page.tsx
apps/website/app/docs/architecture/: page.tsx
apps/website/app/docs/cli/: page.tsx
apps/website/app/docs/configuration/: page.tsx
apps/website/app/docs/getting-started/: page.tsx
apps/website/app/docs/installation/: page.tsx
apps/website/app/docs/plugins/: page.tsx
apps/website/app/docs/profiles/: page.tsx
apps/website/app/docs/troubleshooting/: page.tsx
apps/website/app/download/: page.tsx
apps/website/components/: AppMockup.tsx  CliShowcase.tsx  CodeWindow.tsx  DocComponents.tsx  DocsSidebar.tsx  DownloadSection.tsx  EcosystemDiagram.tsx  FeatureGrid.tsx  Footer.tsx  Hero.tsx  Nav.tsx  OpenSource.tsx  OrbitGlyph.tsx  ProductDemo.tsx  Section.tsx  Strips.tsx
apps/website/docs/: _nav.ts
apps/website/public/: og.txt
assets/: icon.icns
crates/orbit-cli/: Cargo.toml
crates/orbit-cli/src/: main.rs  ui.rs
crates/orbit-core/: Cargo.toml
crates/orbit-core/src/: ai.rs  analytics.rs  db.rs  deps.rs  detect.rs  docker.rs  env.rs  error.rs  files.rs  git.rs  health.rs  http.rs  lib.rs  lsp.rs  model.rs  outline.rs  process.rs  profile.rs  safety.rs  scan.rs  search.rs  shell.rs  store.rs  testing.rs  workspace.rs
docs/: README.md  SIGNING.md  architecture.md  cli.md  configuration.md  contributing.md  development.md  editor.md  environment.md  faq.md  getting-started.md  installation.md  plugins.md  quickstart.md  releasing.md  terminal.md  troubleshooting.md  updates.md  workspace.md
scripts/: README.md  bump-version.sh  check.sh  gen-icons.sh
