[package]
name = "orbit-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "The Orbit engine: project scanning, git, process management, health and local storage."

[lints]
workspace = true

[features]
default = ["persistence"]
# SQLite-backed local storage. Requires a C toolchain to build (bundled SQLite).
persistence = ["dep:rusqlite"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
rusqlite = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"

[package.metadata.docs.rs]
all-features = true
