[package]
name = "orbit-desktop"
version = "1.2.0"
edition = "2021"
rust-version = "1.77"
license = "MIT"
authors = ["Orbit Contributors"]
homepage = "https://orbit.dev"
repository = "https://github.com/martin-k-m/orbit"
description = "Orbit — a local-first developer command center."
default-run = "orbit-desktop"

# This crate lives outside the top-level Cargo workspace on purpose (see the
# root Cargo.toml `exclude`): it drags in the platform webview stack, so it is
# built on its own, both locally via the Tauri CLI and in CI.

[lib]
name = "orbit_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
orbit-core = { path = "../../../crates/orbit-core" }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
# Cross-platform PTY (ConPTY on Windows, openpty elsewhere) for the terminal.
portable-pty = "0.8"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }

[features]
# This feature is used to prevent the app from showing the console window on
# Windows in release builds (see `main.rs`).
custom-protocol = ["tauri/custom-protocol"]
